--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
 
   <inceptionYear>2017</inceptionYear>
 
+  <properties>
+    <maven.plugin.site.version>3.6</maven.plugin.site.version>
+    <maven.doxia-module-markdown.version>1.7</maven.doxia-module-markdown.version>
+  </properties>
+
   <developers>
     <developer>
       <name>Jeroen Hoffman</name>
@@ -53,7 +58,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
-        <version>3.3</version>
+        <version>${maven.plugin.site.version}</version>
         <configuration>
           <generateReports>false</generateReports>
           <outputDirectory>${project.basedir}</outputDirectory>
@@ -62,7 +67,7 @@
           <dependency>
             <groupId>org.apache.maven.doxia</groupId>
             <artifactId>doxia-module-markdown</artifactId>
-            <version>1.5</version>
+            <version>${maven.doxia-module-markdown.version}</version>
           </dependency>
         </dependencies>
       </plugin>
