--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  Copyright 2017-2018 Hippo
+  Copyright 2017-2018 BloomReach, Inc.
 
   Licensed under the Apache License, Version 2.0 (the  "License");
   you may not use this file except in compliance with the License.
@@ -17,8 +17,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <name>Hippo Forge Documentation</name>
-  <groupId>org.onehippo.forge</groupId>
+  <name>BloomReach Forge Documentation</name>
+  <groupId>org.bloomreach.forge</groupId>
   <artifactId>documentation-site</artifactId>
   <version>1.0.0</version>
 
