HIPFORGE-277: updating v13 compatible modules

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,19 @@
     </license>
   </licenses>
 
+  <repositories>
+    <repository>
+      <id>hippo</id>
+      <name>Hippo maven 2 repository.</name>
+      <url>http://maven.onehippo.com/maven2/</url>
+    </repository>
+    <repository>
+      <id>hippo-maven2-forge</id>
+      <name>Hippo Maven 2 Forge Repository</name>
+      <url>http://maven.onehippo.com/maven2-forge/</url>
+    </repository>
+  </repositories>
+
   <build>
    <plugins>
       <plugin>
